# nri-sensors

./: Cargo.toml  LICENSE  README.md  build.rs
src/: arguments.rs  main.rs  mod.rs  sensors.rs  statsgen.rs
src/etc/: nri-sensors.yml
src/template/: nri-infra.jinja2  nri-infra.v4.jinja2
