[package]
name = "nri-sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lm-sensors = "0.1.4"
clap = "3.2.22"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
simple_logger = "2.3.0"
log = "0.4.17"
error-chain = "0.12.4"
regex = "1.6.0"
tera = { version = "1.17.0" }
tera-text-filters = "1.0.0"
hostname = "^0.3"
minifier = "0.2.2"